--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             body{
                 background-image: url("jacky/bg.jpg");
                 background-size: cover;
+                background-repeat:no-repeat;
             }
             ul{
                 width: 200px;
