--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
                     padding: 0;
                 }
             body{
-                background-image: url("jacky/bg.jpg");
+                background: url("jacky/bg.jpg") no-repeat center center;
                 background-size: cover;
-                background-repeat:no-repeat;
             }
             ul{
                 width: 200px;
