--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                     padding: 0;
                 }
             body{
-                background: url("jacky/bg.jpg") no-repeat center center;
+                background-image: url("jacky/bg.jpg");
                 background-size: cover;
             }
             ul{
