完善左侧导航栏

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     </head>
     <body>
     <div class="navi">
-        <div class="top_gray">
+        <!--导航栏-->
+        <div class="navi_top">
             <a href="#" class="icon"><img src="images/icon.jpg" alt=""></a>
         </div>
-        <div class="bottom_white">
+        <div class="navi_bottom">
             <h4 class="name">Sin alma</h4>
             <p class="quotate_p">Stay simple,stay navie.</p>
             <div class="home_div">主页</div>
             <div class="ablum_div">相册</div>
             <div class="moreFunc">
-                <button class="articles">所有文章</button>
+                <button class="articles_btn">所有文章</button>
                 /
-                <button class="abountMe">关于我</button>
+                <button class="abountMe_btn">关于我</button>
             </div>
             <div class="friendsLink">
                 <a href="https://github.com/Sinalma" class="github" target="_blank"><img src="images/github.png" alt=""></a>
@@ -26,6 +27,15 @@
                 <a href="https://www.zhihu.com/people/sinalma" class="zhihu" target="_blank"><img src="images/zhihu.png" alt=""></a>
             </div>
         </div>
+    </div>
+
+    <!--内容模块-->
+    <div class="content">
+        <div class="catalogue">
+            <ul class="introduction"></ul>
+            <ul class="menu"></ul>
+        </div>
+        <ul></ul>
     </div>
     </body>
 </html>
