--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="navi_bottom" id="navi_bottom">
             <h4 class="name">Sin alma</h4>
             <p class="quotate_p">Stay simple,stay navie.</p>
-            <div class="home_div">主页</div>
-            <div class="ablum_div">相册</div>
+            <div class="home_div"><a href="">主页</a></div>
+            <div class="ablum_div"><a href="">相册</a></div>
             <div class="moreFunc">
                 <!--<button class="articles_btn">所有文章</button>-->
                 <a class="articles_btn">所有文章</a>
@@ -47,6 +47,8 @@
         <ul class="content_articles">
             <li>
                 <div class="leftLine"></div>
+                你注册帐号，填了帐号密码，点击了注册，服务器生成本次的私钥和公钥，客户端从服务器获取公钥，客户端把你的明文密码用HD5的方式加密，这个方式不能逆推回去，再用公钥对密码进行加盐，也就是扰乱加密，防止在密码传输过程被截获破译，再将这个密码发送给服务器，服务器用私钥对密码解盐，然后保存经过hd5加密的密码，所以真正的原始密码只有你自己知道。
+                下次登录的时候，填好帐号密码点击登录，从服务器获取公钥进行加盐，并传到服务器，服务器利用私钥进行解盐，利用解盐后的密码和服务器保存的密码进行对比，相同则通知客户端登录成功。
             </li>
             <li>
                 <div class="leftLine"></div>
