完善文章添加标签

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                 <li>Sin alma</li>
                 <li>毕业于医学院</li>
                 <li>享受生活</li>
-                <li>理想做一个优秀的人</li>
+                <li>立志做一个优秀的人</li>
+                <li>少时愿为厨</li>
+                <li>目前潜心学习编程</li>
+                <li>准备投身金融行业</li>
+                <li>梦想成为一名VC</li>
             </ul>
             <ul class="menu"></ul>
         </div>
