组件化,文章和标签

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
             <title>Personal Page</title>
         <link rel="stylesheet" href="css/index.css">
+        <!-- 引入组件tag.js-->
+        <script src="component/tag.js"></script>
+        <script src="component/article.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <!--引入markdown--marked.js-->
         <script src="marked-master/lib/marked.js"></script>
@@ -39,13 +42,14 @@
         <div class="catalogue">
             <ul class="introduction">
                 <li>Sin alma</li>
-                <li>毕业于医学院</li>
-                <li>享受生活</li>
-                <li>立志做一个优秀的人</li>
                 <li>少时愿为厨</li>
-                <li>目前潜心学习编程</li>
+                <li>毕业于医学院</li>
+                <li>目前潜心搞编程</li>
                 <li>准备投身金融行业</li>
                 <li>梦想成为一名VC</li>
+                <li>热爱生活</li>
+                <li>立志做一个优秀的人</li>
+                <li>将来做一只高贵的鸭</li>
             </ul>
             <ul class="menu"></ul>
         </div>
