完善屏幕宽790px界面

--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
     <div class="content" id="content">
 
         <ul class="content_articles" id="content_articles">
-            <li>
-                <div class="leftLine"></div>
-                <div class="art_title"></div>
-                <div class="art_picture"></div>
-                <div class="art_mainText"></div>
-                <div class="art_foot">
-                    <div class="art_tag"></div>
-                    <a href="" class="art_fullTextBtn">展开全文 >></a>
-                </div>
-            </li>
+
         </ul>
         <ul class="content_ablum"></ul>
     </div>
@@ -78,3 +69,13 @@
     </div>
     </body>
 </html>
+<!--<li>-->
+<!--<div class="leftLine"></div>-->
+<!--<div class="art_title"></div>-->
+<!--<div class="art_picture"></div>-->
+<!--<div class="art_mainText"></div>-->
+<!--<div class="art_foot">-->
+<!--<div class="art_tag"></div>-->
+<!--<a href="" class="art_fullTextBtn">展开全文 >></a>-->
+<!--</div>-->
+<!--</li>-->
