--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     </head>
     <body>
     <div class="container">
-
         <!--导航栏-->
         <div class="navi" id="navi">
             <div class="navi_top" id="navi_top">
@@ -54,19 +53,32 @@
             <li>立志做个优秀的人</li>
             <li>下辈子做只高贵的鸭</li>
         </ul>
-        <ul class="menu"></ul>
+        <ul class="allArticles"></ul>
     </div>
 
     <!--内容模块-->
     <div class="content" id="content">
-
+        <!--文章模块-->
         <ul class="content_articles" id="content_articles">
 
         </ul>
+        <!--相册模块-->
         <ul class="content_ablum"></ul>
+        <!--返回顶部按钮-->
+        <a href="" onclick="pageScroll()" class="backTopBtn"></a>
+        <!--底部模块-->
+        <div class="footer">
+            <div class="foot_tools">
+
+            </div>
+            <div class="foot_copyright"></div>
+        </div>
     </div>
 
     </div>
+
+    <div class="hud" id="hud"></div>
+
     </body>
 </html>
 <!--<li>-->
