适配<=790px相册模块

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
     <div class="content" id="content">
         <!--文章模块-->
         <ul class="content_articles" id="content_articles">
-
         </ul>
         <!--相册模块-->
         <ul class="content_ablum" id="content_ablum">
@@ -96,17 +95,47 @@
                     <a class="ablum_menu_photo">照片</a>
                     <a class="ablum_menu_video">视频</a>
                 </div>
-                <div class="photo_li">
-                    <img src="images/icon.jpg">
-                </div>
+            </li>
+            <li class="photo_li">
+                <p photo_li_date>2017.7</p>
+                <figure>
+                    <a>
+                        <img src="images/icon.jpg">
+                    </a>
+                    <figcaption style="display:none">本人</figcaption>
+                </figure>
+            </li>
+            <li class="photo_li">
+                <p photo_li_date>2016</p>
+                <figure>
+                    <a>
+                        <img src="images/2016/35.pic.jpg">
+                    </a>
+                    <figcaption style="display:none">科室聚餐</figcaption>
+                </figure>
+                <figure>
+                <a>
+                    <img src="images/2016/mmexport1460735205796.jpg">
+                </a>
+                <figcaption style="display:none">鸡是好鸡，正不正经我就不知道了。</figcaption>
+                </figure>
+            </li>
+            <li class="photo_li">
+                <p photo_li_date>2014</p>
+                <figure>
+                    <a>
+                        <img src="images/2014/2014_04_10_12_25_00.jpg">
+                    </a>
+                    <figcaption style="display:none">实验室的我，那么深沉</figcaption>
+                </figure>
+            </li>
+            <li class="UY">
                 <!--友言支持-->
                 <!-- UY BEGIN -->
                 <div id="uyan_frame"></div>
-                <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+                <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2142915"></script>
                 <!-- UY END -->
             </li>
-
-
         </ul>
         <!--返回顶部按钮-->
         <a href="" onclick="pageScroll()" class="backTopBtn"></a>
