完善相册模块

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p photo_li_date>2017.7</p>
                 <figure>
                     <a>
-                        <img src="images/icon.jpg">
+                        <img src="photos/2017/icon.jpg">
                     </a>
                     <figcaption style="display:none">本人</figcaption>
                 </figure>
@@ -109,13 +109,13 @@
                 <p photo_li_date>2016</p>
                 <figure>
                     <a>
-                        <img src="images/2016/35.pic.jpg">
+                        <img src="photos/2016/35.pic.jpg">
                     </a>
                     <figcaption style="display:none">科室聚餐</figcaption>
                 </figure>
                 <figure>
                 <a>
-                    <img src="images/2016/mmexport1460735205796.jpg">
+                    <img src="photos/2016/mmexport1460735205796.jpg">
                 </a>
                 <figcaption style="display:none">鸡是好鸡，正不正经我就不知道了。</figcaption>
                 </figure>
@@ -124,7 +124,7 @@
                 <p photo_li_date>2014</p>
                 <figure>
                     <a>
-                        <img src="images/2014/2014_04_10_12_25_00.jpg">
+                        <img src="photos/2014/2014_04_10_12_25_00.jpg">
                     </a>
                     <figcaption style="display:none">实验室的我，那么深沉</figcaption>
                 </figure>
@@ -149,10 +149,27 @@
             <div class="foot_copyright"></div>
         </div>
     </div>
+    </div> <!--contain结束-->
 
-    </div>
-
+    <!--宽度<=790px左侧的蒙版-->
     <div class="hud" id="hud"></div>
+
+    <!--图片浏览器-->
+    <!--黑色背景，暂时只实现查看点击的图片，其他图片不能滑动查看-->
+    <!--<div class="photoBrowser" id="photoBrowser" >-->
+        <!--索引和总图片数，暂时不可用-->
+        <!--<div class="pb_index" style="display: none;">-->
+            <!--<span class="pb_curIndex"></span>-->
+            <!--/-->
+            <!--<span class="pb_totalCount"></span>-->
+        <!--</div>-->
+        <!--<div class="pb_closeBtn"></div>-->
+        <!--<div class="pb_fullWindowBtn"></div>-->
+        <!--<div class="pb_magnifier"></div>-->
+        <!--<div class="pb_preBtn"></div>-->
+        <!--<div class="pb_nextBtn"></div>-->
+        <!--<figure></figure>-->
+    <!--</div>-->
 
     </body>
 </html>
