--- a/index.html
+++ b/index.html
@@ -156,20 +156,20 @@
 
     <!--图片浏览器-->
     <!--黑色背景，暂时只实现查看点击的图片，其他图片不能滑动查看-->
-    <!--<div class="photoBrowser" id="photoBrowser" >-->
+    <div class="photoBrowser" id="photoBrowser" >
         <!--索引和总图片数，暂时不可用-->
         <!--<div class="pb_index" style="display: none;">-->
             <!--<span class="pb_curIndex"></span>-->
-            <!--/-->
+            <!--&lt;!&ndash;/&ndash;&gt;-->
             <!--<span class="pb_totalCount"></span>-->
         <!--</div>-->
-        <!--<div class="pb_closeBtn"></div>-->
-        <!--<div class="pb_fullWindowBtn"></div>-->
-        <!--<div class="pb_magnifier"></div>-->
-        <!--<div class="pb_preBtn"></div>-->
-        <!--<div class="pb_nextBtn"></div>-->
-        <!--<figure></figure>-->
-    <!--</div>-->
+        <div class="pb_closeBtn"></div>
+        <div class="pb_fullWindowBtn"></div>
+        <div class="pb_magnifier"></div>
+        <div class="pb_preBtn"></div>
+        <div class="pb_nextBtn"></div>
+        <figure></figure>
+    </div>
 
     </body>
 </html>
