完善photobrowser图片size处理

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <!--关于我-->
         <ul class="introduction" id="introduction">
-            <li>Sin alma</li>
+            <!--<li>Sin alma</li>-->
             <li>毕业于医学院</li>
             <li>目前潜心搞编程</li>
             <li>准备投身金融行业</li>
@@ -186,11 +186,11 @@
                     </a>
                     <figcaption style="display:none">最后的狂欢，人生最后一次天真无也的狂欢</figcaption>
                 </figure>
-                <figure onclick="pb_showFigure('photos/2014/shanghai.jpg','一次相聚，下次会在何时，你好，上海。')">
+                <figure onclick="pb_showFigure('photos/2014/shanghai.jpg','我在对你笑.')">
                     <a>
                         <img src="photos/2014/shanghai.jpg">
                     </a>
-                    <figcaption style="display:none">一次相聚，下次会在何时，你好，上海。</figcaption>
+                    <figcaption style="display:none">我在对你笑.</figcaption>
                 </figure>
             </li>
             <!--2012-->
@@ -202,11 +202,11 @@
                     </a>
                     <figcaption style="display:none">猜猜拍照的是谁。</figcaption>
                 </figure>
-                <figure onclick="pb_showFigure('photos/2012/shanya.jpg','蓝天白云，柔沙，旅游天堂，三亚。')">
+                <figure onclick="pb_showFigure('photos/2012/shanya.jpg','非常的舒服。')">
                     <a>
                         <img src="photos/2012/shanya.jpg">
                     </a>
-                    <figcaption style="display:none">蓝天白云，柔沙，旅游天堂，三亚。</figcaption>
+                    <figcaption style="display:none">非常的舒服。</figcaption>
                 </figure>
             </li>
             <li class="UY">
@@ -255,7 +255,8 @@
         <!--<div class="pb_naviBottom"></div>-->
         <figure class="pb_figure" id="pb_figure">
             <a>
-                <img id="pb_img" src="photos/2015/happy.jpg">
+                <!--photos/2015/happy.jpg-->
+                <img id="pb_img" src="">
             </a>
         </figure>
         <figcaption class="pb_figcaption" id="pb_figcaption" style="display:block;">stay simple,stay navie.</figcaption>
