index.js code refactoring

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!-- 引入自定义组件组件-->
         <script src="component/tag.js"></script>
         <script src="component/article.js"></script>
+        <script src="component/compose.js"></script>
         <!--图片浏览器处理js-->
         <!--<script src="js/photobroswer.js"></script>-->
         <!--主js-->
